# DQA-Local-Setup

./: .gitignore  README copy.md  README.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  init-db.sql  nginx.conf  pyproject.toml  requirements.txt  setup.sh
backend/main-api/: Dockerfile  main.py
backend/microservices/auth-service/: Dockerfile  main.py  requirements.txt
backend/microservices/data-service/: Dockerfile  main.py
backend/microservices/user-service/: Dockerfile  main.py  requirements.txt
backend/shared/: README.md  config.py  logging_config.py  models.py  utils.py
frontend/: .env.example  .gitignore  COLOR_SYSTEM.md  DEPLOYMENT.md  Dockerfile  default.conf  deploy.sh  index.html  nginx.conf  package-lock.json  package.json  quick-deploy.sh  tailwind.config.js  tailwind_complex.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css  index_backup.css  index_broken.css
frontend/src/components/: AppRoutes.tsx  DataTable.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx  ToastProvider.tsx  TopBar.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: breadcrumb.tsx  button.tsx  dropdown-menu.tsx
frontend/src/examples/: api-usage-examples.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AnalyticsPage.tsx  CalendarPage.tsx  ComparisonPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  ExtractionPage.tsx  HomePage.tsx  LoginPage.tsx  NotificationsPage.tsx  PlaceholderPage.tsx  PromptManagementPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TeamPage.tsx  Untitled-1.md  UploadCasePage.tsx
frontend/src/store/: hooks.ts  index.ts  store.ts
frontend/src/store/slices/: sidebarSlice.ts
scripts/: healthcheck.js
